err/amoniak.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ERPpeek-1.6.3.dist-info'...
Listing './lib/python3.5/site-packages/amoniak'...
Compiling './lib/python3.5/site-packages/amoniak/__init__.py'...
***   File "./lib/python3.5/site-packages/amoniak/__init__.py", line 4
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/amoniak/caching'...
Listing './lib/python3.5/site-packages/amoniak-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/empowering'...
Compiling './lib/python3.5/site-packages/empowering/__init__.py'...
***   File "./lib/python3.5/site-packages/empowering/__init__.py", line 4
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/empowering/executors'...
Listing './lib/python3.5/site-packages/empowering-0.15.3.egg-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/libsaas'...
Listing './lib/python3.5/site-packages/libsaas/executors'...
Listing './lib/python3.5/site-packages/libsaas/filters'...
Listing './lib/python3.5/site-packages/libsaas/scripts'...
Listing './lib/python3.5/site-packages/libsaas/services'...
Listing './lib/python3.5/site-packages/libsaas/services/basecamp'...
Listing './lib/python3.5/site-packages/libsaas/services/bitbucket'...
Listing './lib/python3.5/site-packages/libsaas/services/bitly'...
Listing './lib/python3.5/site-packages/libsaas/services/cartodb'...
Listing './lib/python3.5/site-packages/libsaas/services/compete'...
Listing './lib/python3.5/site-packages/libsaas/services/desk'...
Listing './lib/python3.5/site-packages/libsaas/services/ducksboard'...
Listing './lib/python3.5/site-packages/libsaas/services/flurry'...
Listing './lib/python3.5/site-packages/libsaas/services/fullcontact'...
Listing './lib/python3.5/site-packages/libsaas/services/github'...
Listing './lib/python3.5/site-packages/libsaas/services/googleanalytics'...
Listing './lib/python3.5/site-packages/libsaas/services/googlecalendar'...
Listing './lib/python3.5/site-packages/libsaas/services/googleoauth2'...
Listing './lib/python3.5/site-packages/libsaas/services/googlespreadsheets'...
Listing './lib/python3.5/site-packages/libsaas/services/instagram'...
Listing './lib/python3.5/site-packages/libsaas/services/intercom'...
Listing './lib/python3.5/site-packages/libsaas/services/mailchimp'...
Listing './lib/python3.5/site-packages/libsaas/services/mixpanel'...
Listing './lib/python3.5/site-packages/libsaas/services/mixrank'...
Listing './lib/python3.5/site-packages/libsaas/services/mozscape'...
Listing './lib/python3.5/site-packages/libsaas/services/pingdom'...
Listing './lib/python3.5/site-packages/libsaas/services/pipedrive'...
Listing './lib/python3.5/site-packages/libsaas/services/recurly'...
Listing './lib/python3.5/site-packages/libsaas/services/spotify'...
Listing './lib/python3.5/site-packages/libsaas/services/stripe'...
Listing './lib/python3.5/site-packages/libsaas/services/trello'...
Listing './lib/python3.5/site-packages/libsaas/services/twilio'...
Listing './lib/python3.5/site-packages/libsaas/services/uservoice'...
Listing './lib/python3.5/site-packages/libsaas/services/youtube'...
Listing './lib/python3.5/site-packages/libsaas/services/zendesk'...
Listing './lib/python3.5/site-packages/libsaas-0.4.egg-info'...
Listing './lib/python3.5/site-packages/marshmallow'...
Listing './lib/python3.5/site-packages/marshmallow-3.0.0b6.dist-info'...
Listing './lib/python3.5/site-packages/modeldict'...
Listing './lib/python3.5/site-packages/modeldict-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-2.9.5.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/rq'...
Listing './lib/python3.5/site-packages/rq/cli'...
Listing './lib/python3.5/site-packages/rq/compat'...
Listing './lib/python3.5/site-packages/rq/contrib'...
Listing './lib/python3.5/site-packages/rq-0.10.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/times'...
Listing './lib/python3.5/site-packages/times-0.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
